<resources>
    <string name="app_name">Task</string>
    <string name="about">The cat is a small carnivorous mammal. It is often referred to as a domestic cat to distinguish it from its wild relatives such as tiger, lion, and other species in the …</string>
    <string name="owner">My Cat Profile</string>
    <string name="username">jennifer83</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="followersNum">768</string>
    <string name="followingNum">34</string>
    <string name="imageViewWidth">0dp</string>
    <string name="imageViewHeight">0dp</string>
    <string name="imageButtonFromStart">8dp</string>
    <string name="imageButtonFromTop">32dp</string>
    <string name="imageButtonPadding">4dp</string>
    <string name="imageButton2FromEnd">8dp</string>
    <string name="imageButton2Padding">8dp</string>
    <string name="textView2FromStart">8dp</string>
    <string name="textView2FromEnd">8dp</string>
    <string name="textView2TextSize">24sp</string>
    <string name="textView3FromStart">8dp</string>
    <string name="textView3TextSize">18sp</string>
    <string name="textView3FromTop">8dp</string>
    <string name="textView3FromEnd">8dp</string>
    <string name="textViewWidth">0dp</string>
    <string name="textViewFromStart">16dp</string>
    <string name="textViewFromTop">8dp</string>
    <string name="textViewFromEnd">18dp</string>
    <string name="buttonWidth">0dp</string>
    <string name="buttonFromStart">16dp</string>
    <string name="buttonFromEnd">16dp</string>
    <string name="buttonText">EDIT PROFILE</string>
    <string name="buttonFromTop">8dp</string>
    <string name="imageView2Width">0dp</string>
    <string name="imageView2Height">2dp</string>
    <string name="imageView2FromTop">48dp</string>
    <string name="imageView2HorizontalBias">0.498</string>
    <string name="textView4HorizontalBias">0.5</string>
    <string name="textView4FromStart">8dp</string>
    <string name="textView4FromBottom">16dp</string>
    <string name="textView5FromStart">8dp</string>
    <string name="textView5FromEnd">8dp</string>
    <string name="textView5FromBottom">16dp</string>
    <string name="textView6FromBottom">8dp</string>
    <string name="textView7FromBottom">8dp</string>
    <string name="imageView3FromStart">8dp</string>
    <string name="imageView3FromTop">32dp</string>
    <string name="imageView3FromEnd">8dp</string>
    <string name="imageView3HorizontalBias">0.498</string>
</resources>

