<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@string/imageViewWidth"
        android:layout_height="@string/imageViewHeight"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="w,.95:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_girl" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/imageButtonFromStart"
        android:layout_marginTop="@string/imageButtonFromTop"
        android:background="@android:color/transparent"
        android:padding="@string/imageButtonPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@string/imageButton2FromEnd"
        android:background="@android:color/transparent"
        android:padding="@string/imageButton2Padding"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/textView2FromStart"
        android:layout_marginEnd="@string/textView2FromEnd"
        android:text="@string/username"
        android:textColor="@android:color/background_light"
        android:textSize="@string/textView2TextSize"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/textView3FromStart"
        android:layout_marginTop="@string/textView3FromTop"
        android:layout_marginEnd="@string/textView3FromEnd"
        android:text="@string/owner"
        android:textColor="@android:color/background_dark"
        android:textSize="@string/textView3TextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@string/textViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/textViewFromStart"
        android:layout_marginTop="@string/textViewFromTop"
        android:layout_marginEnd="@string/textViewFromEnd"
        android:gravity="center"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="@string/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/buttonFromStart"
        android:layout_marginTop="@string/buttonFromTop"
        android:layout_marginEnd="@string/buttonFromEnd"
        android:background="@drawable/round_corner"
        android:text="@string/buttonText"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@string/imageView2Width"
        android:layout_height="@string/imageView2Height"
        android:layout_marginTop="@string/imageView2FromTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@string/imageView2HorizontalBias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/bg_underline" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/textView4FromStart"
        android:layout_marginBottom="@string/textView4FromBottom"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="@string/textView4HorizontalBias"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/textView5FromStart"
        android:layout_marginEnd="@string/textView5FromEnd"
        android:layout_marginBottom="@string/textView5FromBottom"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@string/textView6FromBottom"
        android:text="@string/followersNum"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@string/textView7FromBottom"
        android:text="@string/followingNum"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@string/imageView3FromStart"
        android:layout_marginTop="@string/imageView3FromTop"
        android:layout_marginEnd="@string/imageView3FromEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@string/imageView3HorizontalBias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/stylish_girls" />

</androidx.constraintlayout.widget.ConstraintLayout>
